public enum TypeDiplome {
    LICENCEPRO, LICENCE, BUT, MASTER;
}
