public class diplome {
}
